# coincalc

./: .gitignore  main.py  pyproject.toml  requirements.txt
coincalc/: cli.py
tests/: test_coincalc.py
